@@ -6,6 +6,15 @@
 2013-06-28  Manjunath Matti  <mmatti@caviumnetworks.com>
 
 	2013-02-04  Alexander Potapenko <glider@google.com>
+		    Jack Howarth  <howarth@bromo.med.uc.edu>
+		    Jakub Jelinek  <jakub@redhat.com>
+
+	PR sanitizer/55617
+	* g++.dg/asan/pr55617.C: New test.
+
+2013-06-28  Manjunath Matti  <mmatti@caviumnetworks.com>
+
+	2013-02-04  Alexander Potapenko <glider@google.com>
 	Jack Howarth  <howarth@bromo.med.uc.edu>
 	Jakub Jelinek  <jakub@redhat.com>
 
